chore: upgrade swagger annotations to v3 (#1036)
* upgrade swagger annotations to v3

* update java version